Added Hyperparameter Optimization

--- a/docs/source/algorithms/index.ipynb
+++ b/docs/source/algorithms/index.ipynb
@@ -40,6 +40,7 @@
     "   soo/sres\n",
     "   soo/isres\n",
     "   soo/cmaes\n",
+    "   soo/g3pcx\n",
     "   moo/nsga2\n",
     "   moo/rnsga2\n",
     "   moo/nsga3\n",
@@ -48,6 +49,7 @@
     "   moo/moead\n",
     "   moo/ctaea\n",
     "   moo/age\n",
+    "   moo/age2\n",
     "   moo/rvea\n",
     "   moo/sms\n",
     "   moo/dnsga2\n"
