--- a/docs/source/algorithms/moo/rvea.ipynb
+++ b/docs/source/algorithms/moo/rvea.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The algorithm is implemented based on <cite data-cite=\"rvea\"></cite>."
+    "The algorithm is implemented based on <cite data-cite=\"rvea\"></cite>. In RVEA, a scalarization approach, termed angle penalized distance (APD), is adopted to balance the convergence and diversity of the solutions in the high-dimensional objective space. Furthermore, an adaptation strategy is proposed to dynamically adjust the reference vectors' distribution according to the objective functions' scales. An illustration of the APD is shown below:"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "metadata": {},
    "source": [
     "<div style=\"text-align: center;\">\n",
-    "    <img src=\"https://github.com/anyoptimization/pymoo-data/blob/main/docs/images/nsga2_crowding.png?raw=true\" width=\"350\">\n",
+    "    <img src=\"https://github.com/anyoptimization/pymoo-data/blob/main/docs/images/rvea_apd.png?raw=true\" width=\"350\">\n",
     "</div>"
    ]
   },
@@ -37,6 +37,18 @@
    "metadata": {},
    "source": [
     "### Example"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
+    ".. admonition:: Info\n",
+    "    :class: myOwnStyle\n",
+    "\n",
+    "    Note that the APD is adapted based on the progress the algorithm has made. Thus, termination criteria such as *n_gen* or *n_evals* should be used."
    ]
   },
   {
