--- a/docs/source/case_studies/index.ipynb
+++ b/docs/source/case_studies/index.ipynb
@@ -2,55 +2,57 @@
  "cells": [
   {
    "cell_type": "raw",
-   "id": "c23dfa57-d50b-4b8a-bfa3-917993a5a7ad",
    "metadata": {
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    ".. _nb_constraints_violation:"
+    ".. _nb_case_studies:"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8b7fb976-5e36-4943-968e-8b5d58a33d5d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## Constraint Violation (CV)"
+    "# Case Studies"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext",
+    "tags": []
+   },
+   "source": [
+    "\n",
+    ".. toctree::\n",
+    "   :maxdepth: 1\n",
+    "   :hidden:\n",
+    "   \n",
+    "   subset_selection.ipynb\n",
+    "   portfolio_allocation.ipynb\n",
+    "\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
+    ".. admonition:: Overview\n",
+    "    :class: myOwnStyle\n",
+    "\n",
+    "    - `Subset Selection <subset_selection.ipynb>`_: \n",
+    "\n",
+    "    - `Portfolio Allocation <portfolio_allocation.ipynb>`_:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25f6f2ef-eaef-42f6-9e63-f175d25f56a4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "5fedc453-09ec-48d9-ae1b-754fd91b9aa1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "2+2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "926126d2-ada6-4252-9302-3fb2165cf0d4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -76,5 +78,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
