--- a/docs/source/constraints/as_penalty.ipynb
+++ b/docs/source/constraints/as_penalty.ipynb
@@ -6,26 +6,41 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    ".. _nb_constraints_eps:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Epsilon Constraint"
+    ".. _nb_constraints_penalty:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-07-03T13:27:30.874019Z",
-     "iopub.status.busy": "2022-07-03T13:27:30.870025Z",
-     "iopub.status.idle": "2022-07-03T13:27:45.032586Z",
-     "shell.execute_reply": "2022-07-03T13:27:45.031629Z"
-    }
+    "nbsphinx": "hidden",
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "%run ./index.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Constraint Violation (CV) as Penalty"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another well-known way of handling constraints is removing the constraint and adding it as a penalty to objective(s). One easy way of achieving that is redefining the problem, as shown below using the `ConstraintsAsPenalty` class. Nevertheless, whenever two numbers are added, normalization can become an issue. Thus, commonly a penalty coefficient (here `penalty`) needs to be defined. It can be helpful to play with this parameter if the results are not satisfying."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
    },
    "outputs": [
     {
@@ -33,33 +48,123 @@
      "output_type": "stream",
      "text": [
       "Best solution found: \n",
-      "X = [0.99999823 0.99999851 0.99999938 0.99999986 0.99999973 0.9999982\n",
-      " 0.99997977 0.99998597 0.99999206 2.9792826  2.97834691 2.99942398\n",
-      " 0.99998973]\n",
-      "F = [-14.95697887]\n",
+      "X = [0.50058588 0.49942291]\n",
+      "F = [0.50000947]\n",
       "CV = [0.]\n"
      ]
     }
    ],
    "source": [
-    "from pymoo.algorithms.soo.nonconvex.ga import GA\n",
-    "from pymoo.constraints.eps import AdaptiveEpsilonConstraintHandling\n",
+    "from pymoo.algorithms.soo.nonconvex.de import DE\n",
+    "from pymoo.constraints.as_penalty import ConstraintsAsPenalty\n",
     "from pymoo.optimize import minimize\n",
-    "from pymoo.problems.single import G1\n",
+    "from pymoo.core.evaluator import Evaluator\n",
+    "from pymoo.core.individual import Individual\n",
     "\n",
-    "problem = G1()\n",
+    "problem = ConstrainedProblem()\n",
     "\n",
-    "algorithm = AdaptiveEpsilonConstraintHandling(GA())\n",
+    "algorithm = DE()\n",
     "\n",
-    "res = minimize(problem,\n",
+    "res = minimize(ConstraintsAsPenalty(problem, penalty=100.0),\n",
     "               algorithm,\n",
-    "               ('n_gen', 200),\n",
-    "               copy_algorithm=False,\n",
-    "               save_history=False,\n",
     "               seed=1,\n",
     "               verbose=False)\n",
     "\n",
-    "print(\"Best solution found: \\nX = %s\\nF = %s\\nCV = %s\" % (res.X, res.F, res.CV))\n"
+    "res = Evaluator().eval(problem, Individual(X=res.X))\n",
+    "\n",
+    "print(\"Best solution found: \\nX = %s\\nF = %s\\nCV = %s\" % (res.X, res.F, res.CV))"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
+    ".. _nb_constraints_no_feas_found:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution only almost feasible"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Please note that this approach might not always find a feasible solution (because the algorithm does not know anything about whether a solution is feasible or not). For instance, see the example below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best solution found: \n",
+      "X = [0.49918147 0.50081538]\n",
+      "F = [0.49999819]\n",
+      "CV = [3.14674782e-06]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pymoo.algorithms.soo.nonconvex.de import DE\n",
+    "from pymoo.constraints.as_penalty import ConstraintsAsPenalty\n",
+    "from pymoo.optimize import minimize\n",
+    "from pymoo.core.evaluator import Evaluator\n",
+    "from pymoo.core.individual import Individual\n",
+    "\n",
+    "res = minimize(ConstraintsAsPenalty(problem, penalty=2.0),\n",
+    "               algorithm,\n",
+    "               seed=1,\n",
+    "               verbose=False)\n",
+    "\n",
+    "res = Evaluator().eval(problem, Individual(X=res.X))\n",
+    "\n",
+    "print(\"Best solution found: \\nX = %s\\nF = %s\\nCV = %s\" % (res.X, res.F, res.CV))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In such cases, it can be helpful to perform another search for the solution found to the original problem to find a feasible one. This second search method can, for instance, be realized by a local search or by using again a population-based method injecting the solution found before. Here, we demonstrate the latter:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best solution found: \n",
+      "X = [0.52660211 0.47614088]\n",
+      "F = [0.50401992]\n",
+      "CV = [0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pymoo.operators.sampling.lhs import LHS\n",
+    "\n",
+    "sampling = LHS().do(problem, 100)\n",
+    "sampling[0].X = res.X\n",
+    "\n",
+    "algorithm = DE(sampling=sampling)\n",
+    "\n",
+    "res = minimize(problem, algorithm)\n",
+    "\n",
+    "print(\"Best solution found: \\nX = %s\\nF = %s\\nCV = %s\" % (res.X, res.F, res.CV))"
    ]
   }
  ],
@@ -79,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
