--- a/docs/source/constraints/repair.ipynb
+++ b/docs/source/constraints/repair.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "id": "d8b54188-9c5d-494d-8435-aea1ccacb125",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
+    ".. _nb_repair:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d2e220b4-b2af-4278-bb4f-e5936312ced3",
+   "metadata": {
+    "nbsphinx": "hidden",
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "%run ./index.ipynb"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "be5e07d8-23af-4361-9f4e-5982a8a1ab40",
    "metadata": {
@@ -15,92 +39,23 @@
    "id": "c985afe1-bad1-4689-a929-ae145f2d2bda",
    "metadata": {},
    "source": [
-    "A simple approach is to handle constraints through a repair function. This is only possible if the equation of the constraint is known. The repair makes sure every solution that is evaluated is, in fact, feasible. Let us consider the following example where \n",
-    "the equality constraints need to consider more than one variable:"
+    "A simple approach is to handle constraints through a repair function. This is only possible if the equation of the constraint is known. The repair makes sure every solution that is evaluated is, in fact, feasible. Let us consider the equality constraint example."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f93bb348-ca29-4559-95fb-fbfb1d1df374",
+   "id": "809cfc24-3172-43b8-918d-b29c63383951",
    "metadata": {},
    "source": [
-    "\\begin{align} \n",
-    "\\begin{split}\n",
-    "\\min \\;\\; & f_1(x) = (x_1^2 + x_2^2) \\\\ \n",
-    "\\max \\;\\; & f_2(x) = -(x_1-1)^2 - x_2^2 \\\\[1mm]\n",
-    "\\text{s.t.} \\;\\; & g_1(x_1, x_3) : x_1 + x_3 = 2\\\\[2mm]\n",
-    "& -2 \\leq x_1 \\leq 2 \\\\\n",
-    "& -2 \\leq x_2 \\leq 2 \\\\\n",
-    "& -2 \\leq x_3 \\leq 2\n",
-    "\\end{split}\n",
-    "\\end{align}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1f60cea7-5e35-40b4-99bf-07c96b9733c6",
-   "metadata": {},
-   "source": [
-    "We implement the problem using by squaring the term and using an $\\epsilon$ as we have explained above. The source code for the problem looks as follows:"
+    "Let us define a `Repair` operator that always satisfies the equality constraint (the inequality constraint is simply ignored and will be figured out by the algorithm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "36bae003-3d87-4e23-a314-817352df6105",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-09-14T16:18:01.793022Z",
-     "iopub.status.busy": "2021-09-14T16:18:01.792227Z",
-     "iopub.status.idle": "2021-09-14T16:18:01.793894Z",
-     "shell.execute_reply": "2021-09-14T16:18:01.794313Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "from pymoo.core.problem import Problem\n",
-    "\n",
-    "\n",
-    "class MyProblem(Problem):\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        super().__init__(n_var=3,\n",
-    "                         n_obj=2,\n",
-    "                         n_ieq_constr=1,\n",
-    "                         xl=np.array([-2, -2, -2]),\n",
-    "                         xu=np.array([2, 2, 2]))\n",
-    "\n",
-    "    def _evaluate(self, x, out, *args, **kwargs):\n",
-    "        f1 = x[:, 0] ** 2 + x[:, 1] ** 2\n",
-    "        f2 = (x[:, 0] - 1) ** 2 + x[:, 1] ** 2\n",
-    "        g1 = (x[:, 0] + x[:, 2] - 2) ** 2 - 1e-5\n",
-    "\n",
-    "        out[\"F\"] = np.column_stack([f1, f2])\n",
-    "        out[\"G\"] = g1\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "04288c35-47ca-4a08-9be4-6bad43ef2990",
-   "metadata": {},
-   "source": [
-    "As you might have noticed, the problem has similar characteristics to the problem in our getting started. \n",
-    "Before a solution is evaluated, a repair function is called. To make sure a solution is feasible, an approach would be to either set $x_3 = 2 - x_1$ or $x_1 = 2 - x_3$. Additionally, we need to consider that this repair might produce a variable to be out of bounds."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c0ef1df3-f2d9-4a20-92a4-5684e5032e23",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-09-14T16:18:01.800667Z",
-     "iopub.status.busy": "2021-09-14T16:18:01.800006Z",
-     "iopub.status.idle": "2021-09-14T16:18:01.801586Z",
-     "shell.execute_reply": "2021-09-14T16:18:01.802003Z"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -108,26 +63,9 @@
     "\n",
     "class MyRepair(Repair):\n",
     "\n",
-    "    def _do(self, problem, pop, **kwargs):\n",
-    "        for k in range(len(pop)):\n",
-    "            x = pop[k].X\n",
-    "            if np.random.random() < 0.5:\n",
-    "                \n",
-    "                x[2] = 2 - x[0]\n",
-    "                if x[2] > 2:\n",
-    "                    val = x[2] - 2\n",
-    "                    x[0] += val\n",
-    "                    x[2] -= val\n",
-    "                    \n",
-    "            else:\n",
-    "                x[0] = 2 - x[2]\n",
-    "                if x[0] > 2:\n",
-    "                    val = x[0] - 2\n",
-    "                    x[2] += val\n",
-    "                    x[0] -= val\n",
-    "                \n",
-    "                \n",
-    "        return pop"
+    "    def _do(self, problem, X, **kwargs):\n",
+    "        X[:, 0] = 1/3 * X[:, 1]\n",
+    "        return X"
    ]
   },
   {
@@ -135,64 +73,64 @@
    "id": "c70b48e2-9ee4-4c58-a5f6-d5de74ac33c6",
    "metadata": {},
    "source": [
-    "Now the algorithm object needs to be initialized with the repair operator and then can be run to solve the problem:"
+    "Now the algorithm object needs to be initialized with the `Repair` operator and then can be run to solve the problem:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "54068131-6224-48b0-9608-01546a096b38",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-09-14T16:18:01.808072Z",
-     "iopub.status.busy": "2021-09-14T16:18:01.807414Z",
-     "iopub.status.idle": "2021-09-14T16:18:02.533299Z",
-     "shell.execute_reply": "2021-09-14T16:18:02.533809Z"
-    }
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=================================================================================\n",
+      "n_gen  |  n_eval  |     cv_min    |     cv_avg    |     f_avg     |     f_min    \n",
+      "=================================================================================\n",
+      "     1 |      100 |  0.000000E+00 |  0.3516478340 |  1.1816456287 |  1.0001924199\n",
+      "     2 |      200 |  0.000000E+00 |  0.0206023997 |  1.1675620969 |  1.0001924199\n",
+      "     3 |      300 |  0.000000E+00 |  0.000000E+00 |  1.1107388988 |  1.0001924199\n",
+      "     4 |      400 |  0.000000E+00 |  0.000000E+00 |  1.0524340820 |  1.0001875222\n",
+      "     5 |      500 |  0.000000E+00 |  0.000000E+00 |  1.0306380519 |  1.0001875222\n",
+      "     6 |      600 |  0.000000E+00 |  0.000000E+00 |  1.0172517666 |  1.0001875222\n",
+      "     7 |      700 |  0.000000E+00 |  0.000000E+00 |  1.0109417735 |  1.0001875222\n",
+      "     8 |      800 |  0.000000E+00 |  0.000000E+00 |  1.0072225067 |  1.0000905808\n",
+      "     9 |      900 |  0.000000E+00 |  0.000000E+00 |  1.0049397512 |  1.0000460954\n",
+      "    10 |     1000 |  0.000000E+00 |  0.000000E+00 |  1.0040643895 |  1.0000460954\n",
+      "    11 |     1100 |  0.000000E+00 |  0.000000E+00 |  1.0032576344 |  1.0000460954\n",
+      "    12 |     1200 |  0.000000E+00 |  0.000000E+00 |  1.0022187352 |  1.0000460954\n",
+      "    13 |     1300 |  0.000000E+00 |  0.000000E+00 |  1.0013858855 |  1.0000447710\n",
+      "    14 |     1400 |  0.000000E+00 |  0.000000E+00 |  1.0007091290 |  1.0000395602\n",
+      "    15 |     1500 |  0.000000E+00 |  0.000000E+00 |  1.0004493175 |  1.0000367607\n",
+      "    16 |     1600 |  0.000000E+00 |  0.000000E+00 |  1.0003451683 |  1.0000367607\n",
+      "    17 |     1700 |  0.000000E+00 |  0.000000E+00 |  1.0002456102 |  1.0000341967\n",
+      "    18 |     1800 |  0.000000E+00 |  0.000000E+00 |  1.0001581006 |  1.0000267600\n",
+      "    19 |     1900 |  0.000000E+00 |  0.000000E+00 |  1.0001137034 |  1.0000267600\n",
+      "    20 |     2000 |  0.000000E+00 |  0.000000E+00 |  1.0000901710 |  1.0000250541\n",
+      "Best solution found: \n",
+      "X = [0.25000626 0.75001879]\n",
+      "F = [1.00002505]\n",
+      "CV = [0.]\n"
+     ]
+    }
+   ],
    "source": [
-    "from pymoo.algorithms.moo.nsga2 import NSGA2\n",
+    "from pymoo.algorithms.soo.nonconvex.ga import GA\n",
     "from pymoo.optimize import minimize\n",
-    "from pymoo.visualization.scatter import Scatter\n",
     "\n",
+    "algorithm = GA(repair=MyRepair())\n",
     "\n",
-    "algorithm = NSGA2(pop_size=100, repair=MyRepair(), eliminate_duplicates=True)\n",
-    "\n",
-    "res = minimize(MyProblem(),\n",
+    "res = minimize(ConstrainedProblemWithEquality(),\n",
     "               algorithm,\n",
     "               ('n_gen', 20),\n",
     "               seed=1,\n",
     "               verbose=True)\n",
     "\n",
-    "plot = Scatter()\n",
-    "plot.add(res.F, color=\"red\")\n",
-    "plot.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "247fb8b1-8bf2-4839-b125-cca81da1610b",
-   "metadata": {},
-   "source": [
-    "In our case it is easy to verify if the constraint is violated or not:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf96f1db-7bdd-4589-b5ff-0b486420f53a",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-09-14T16:18:02.539149Z",
-     "iopub.status.busy": "2021-09-14T16:18:02.538495Z",
-     "iopub.status.idle": "2021-09-14T16:18:02.540657Z",
-     "shell.execute_reply": "2021-09-14T16:18:02.541076Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "print(res.X[:, 0] + res.X[:, 2])"
+    "print(\"Best solution found: \\nX = %s\\nF = %s\\nCV = %s\" % (res.X, res.F, res.CV))"
    ]
   },
   {
@@ -205,47 +143,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "18e818b8-73cd-4a48-9567-21f76ac9cf3d",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-09-14T16:18:02.546462Z",
-     "iopub.status.busy": "2021-09-14T16:18:02.545823Z",
-     "iopub.status.idle": "2021-09-14T16:18:03.022822Z",
-     "shell.execute_reply": "2021-09-14T16:18:03.022403Z"
-    }
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=================================================================================\n",
+      "n_gen  |  n_eval  |     cv_min    |     cv_avg    |     f_avg     |     f_min    \n",
+      "=================================================================================\n",
+      "     1 |      100 |  0.0168997810 |  1.1966219666 |             - |             -\n",
+      "     2 |      200 |  0.0006806481 |  0.5277543787 |             - |             -\n",
+      "     3 |      300 |  0.0006806481 |  0.2246605969 |             - |             -\n",
+      "     4 |      400 |  0.0001335846 |  0.0831058535 |             - |             -\n",
+      "     5 |      500 |  0.0001335846 |  0.0417134481 |             - |             -\n",
+      "     6 |      600 |  0.0001335846 |  0.0255767204 |             - |             -\n",
+      "     7 |      700 |  0.0001335846 |  0.0163322959 |             - |             -\n",
+      "     8 |      800 |  0.0001335846 |  0.0122030304 |             - |             -\n",
+      "     9 |      900 |  0.0001335846 |  0.0100974433 |             - |             -\n",
+      "    10 |     1000 |  0.0001335846 |  0.0079568679 |             - |             -\n",
+      "    11 |     1100 |  0.0001335846 |  0.0055451925 |             - |             -\n",
+      "    12 |     1200 |  0.0001335846 |  0.0042557033 |             - |             -\n",
+      "    13 |     1300 |  0.0001335846 |  0.0036626923 |             - |             -\n",
+      "    14 |     1400 |  0.0001335846 |  0.0034220280 |             - |             -\n",
+      "    15 |     1500 |  0.0001335846 |  0.0032915840 |             - |             -\n",
+      "    16 |     1600 |  0.000000E+00 |  0.0030360492 |  1.0347093517 |  1.0347093517\n",
+      "    17 |     1700 |  0.000000E+00 |  0.0027270410 |  1.0347093517 |  1.0347093517\n",
+      "    18 |     1800 |  0.000000E+00 |  0.0025378693 |  1.0347093517 |  1.0347093517\n",
+      "    19 |     1900 |  0.000000E+00 |  0.0022544311 |  1.0347093517 |  1.0347093517\n",
+      "    20 |     2000 |  0.000000E+00 |  0.0021522800 |  1.0347093517 |  1.0347093517\n",
+      "Best solution found: \n",
+      "X = [0.25868534 0.77602401]\n",
+      "F = [1.03470935]\n",
+      "CV = [0.]\n"
+     ]
+    }
+   ],
    "source": [
-    "algorithm = NSGA2(pop_size=100, eliminate_duplicates=True)\n",
+    "from pymoo.algorithms.soo.nonconvex.ga import GA\n",
+    "from pymoo.optimize import minimize\n",
     "\n",
-    "res = minimize(MyProblem(),\n",
+    "\n",
+    "algorithm = GA()\n",
+    "\n",
+    "res = minimize(ConstrainedProblemWithEquality(),\n",
     "               algorithm,\n",
     "               ('n_gen', 20),\n",
     "               seed=1,\n",
     "               verbose=True)\n",
     "\n",
-    "plot = Scatter()\n",
-    "plot.add(res.F, color=\"red\")\n",
-    "plot.show()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b21f6cd2-f612-46da-a716-1185d33bf31e",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-09-14T16:18:03.027233Z",
-     "iopub.status.busy": "2021-09-14T16:18:03.026435Z",
-     "iopub.status.idle": "2021-09-14T16:18:03.028741Z",
-     "shell.execute_reply": "2021-09-14T16:18:03.029149Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "print(res.X[:, 0] + res.X[:, 2])"
+    "print(\"Best solution found: \\nX = %s\\nF = %s\\nCV = %s\" % (res.X, res.F, res.CV))"
    ]
   }
  ],
