--- a/docs/source/gradients/index.ipynb
+++ b/docs/source/gradients/index.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
+   "id": "de9db017-6072-448e-9642-765c49c4aac9",
    "metadata": {
     "raw_mimetype": "text/restructuredtext"
    },
@@ -11,6 +12,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6e479c83-65fe-42fd-8006-31431882d22f",
    "metadata": {},
    "source": [
     "# Gradients"
@@ -18,6 +20,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1ed7c34d-09f1-4031-acdf-a327ba90a9eb",
    "metadata": {},
    "source": [
     "If the problem is implemented using autograd then the gradients through automatic differentiation are available out of the box. Let us consider the following problem definition for a simple quadratic function without any constraints:"
@@ -26,13 +29,8 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "5e480925-4e01-48dd-9316-3e48410c3ca6",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-07-03T13:06:39.375266Z",
-     "iopub.status.busy": "2022-07-03T13:06:39.373716Z",
-     "iopub.status.idle": "2022-07-03T13:06:39.985947Z",
-     "shell.execute_reply": "2022-07-03T13:06:39.984872Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -57,6 +55,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b1d64428-553c-4d6a-967a-67114298261c",
    "metadata": {},
    "source": [
     "The gradients can be retrieved by appending `F` to the `return_values_of` parameter:"
@@ -65,13 +64,8 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "8e332e32-0d76-412d-aaaf-f4a24511f96a",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-07-03T13:06:39.999539Z",
-     "iopub.status.busy": "2022-07-03T13:06:39.995743Z",
-     "iopub.status.idle": "2022-07-03T13:06:40.023780Z",
-     "shell.execute_reply": "2022-07-03T13:06:40.022932Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -82,6 +76,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "169bc1c7-ada6-4378-a035-7a11924b7e26",
    "metadata": {},
    "source": [
     "The resulting gradients are stored in `dF` and the shape is (n_rows, n_objective, n_vars):"
@@ -90,13 +85,8 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "8f137a00-2f29-4ef2-ba2e-a4f5b1aa3d84",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-07-03T13:06:40.038094Z",
-     "iopub.status.busy": "2022-07-03T13:06:40.030462Z",
-     "iopub.status.idle": "2022-07-03T13:06:40.058252Z",
-     "shell.execute_reply": "2022-07-03T13:06:40.053911Z"
-    },
     "tags": []
    },
    "outputs": [
@@ -118,6 +108,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "41e7650d-4460-43b8-b994-22bb05f2b621",
    "metadata": {},
    "source": [
     "Analogously, the gradient of constraints can be retrieved by appending `dG`."
@@ -126,7 +117,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -144,5 +135,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
