--- a/docs/source/problems/index.ipynb
+++ b/docs/source/problems/index.ipynb
@@ -28,8 +28,7 @@
     "   \n",
     "   definition.ipynb\n",
     "   test_problems.ipynb\n",
-    "   parallelization.ipynb\n",
-    "   gradients.ipynb"
+    "   parallelization.ipynb"
    ]
   },
   {
@@ -51,8 +50,7 @@
     "\n",
     "    - `Definition <definition.ipynb>`_: How to define an optimization problem\n",
     "    - `Test Problems <test_problems.ipynb>`_: Single, Multi and Many-objective Test Problems available in *pymoo*\n",
-    "    - `Parallelization <parallelization.ipynb>`_: How to parallelize function evaluations\n",
-    "    - `Gradients <gradients.ipynb>`_: How to access gradient information of a solution"
+    "    - `Parallelization <parallelization.ipynb>`_: How to parallelize function evaluations"
    ]
   }
  ],
