--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -1,3 +1,26 @@
+@ARTICLE{g3pcx,  author={Deb, Kalyanmoy and Anand, Ashish and Joshi, Dhiraj},  journal={Evolutionary Computation},   title={A Computationally Efficient Evolutionary Algorithm for Real-Parameter Optimization},   year={2002},  volume={10},  number={4},  pages={371-395},  doi={10.1162/106365602760972767}}
+
+@inproceedings{dnsga2,
+author = {Deb, Kalyanmoy and Bhaskara Rao, N. Udaya and Karthik, S.},
+title = {Dynamic Multi-Objective Optimization and Decision-Making Using Modified NSGA-II: A Case Study on Hydro-Thermal Power Scheduling},
+year = {2007},
+isbn = {9783540709275},
+publisher = {Springer-Verlag},
+address = {Berlin, Heidelberg},
+booktitle = {Proceedings of the 4th International Conference on Evolutionary Multi-Criterion Optimization},
+pages = {803–817},
+numpages = {15},
+location = {Matsushima, Japan},
+series = {EMO'07}
+}
+
+
+@inproceedings{parameter-less,
+  title={A Niched-Penalty Approach for Constraint Handling in Genetic Algorithms},
+  author={KalyanmoyDebandSamirAgrawal KanpurGeneticAlgorithmsLaboratory and Departmentof MechanicalEngineering and IndianInstituteof TechnologyKanpur},
+  year={2002},
+    booktitle={}, 
+}
 
 @inproceedings{df,
   title={Benchmark Problems for CEC2018 Competition on Dynamic Multiobjective Optimisation},
