--- a/docs/source/algorithms/moo/sms.ipynb
+++ b/docs/source/algorithms/moo/sms.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The algorithm is implemented based on <cite data-cite=\"smsmoea\"></cite>."
+    "The algorithm is implemented based on <cite data-cite=\"sms\"></cite>. The hypervolume measure (or s-metric) is a frequently applied quality measure for comparing the results of evolutionary multiobjective optimization algorithms (EMOA). "
    ]
   },
   {
@@ -28,8 +28,27 @@
    "metadata": {},
    "source": [
     "<div style=\"text-align: center;\">\n",
-    "    <img src=\"https://github.com/anyoptimization/pymoo-data/blob/main/docs/images/nsga2_crowding.png?raw=true\" width=\"350\">\n",
+    "    <img src=\"https://github.com/anyoptimization/pymoo-data/blob/main/docs/images/sms.png?raw=true\" width=\"300\">\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SMS-EMOA aims to maximize the dominated hypervolume within the optimization process. It features a selection operator based on the hypervolume measure combined with the concept of non-dominated sorting. As a result, the algorithm’s population evolves to a well-distributed set of solutions, focusing on interesting regions of the Pareto front. "
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
+    ".. admonition:: Info\n",
+    "    :class: myOwnStyle\n",
+    "\n",
+    "    Note that the hypervolume metric becomes computationally very expensive for more than three objectives."
    ]
   },
   {
