--- a/docs/source/constraints/eps.ipynb
+++ b/docs/source/constraints/eps.ipynb
@@ -11,14 +11,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-07-03T13:27:50.289097Z",
-     "iopub.status.busy": "2022-07-03T13:27:50.288333Z",
-     "iopub.status.idle": "2022-07-03T13:27:50.787597Z",
-     "shell.execute_reply": "2022-07-03T13:27:50.786943Z"
-    },
     "nbsphinx": "hidden",
     "tags": []
    },
@@ -32,19 +26,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Constraints As Objective"
+    "### $\\epsilon$-Constraint Handling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of directly redefining the problem, one can also redefine an algorithm that changes its conclusion, whether a solution is feasible given the constraint violation over time. One common way is to allow an $\\epsilon$ amount of infeasibility to still consider a solution as feasible. Now, one can decrease the $\\epsilon$ over time and thus finally fall back to a feasibility first algorithm. The $\\epsilon$  has reached zero depending on `perc_eps_until`. For example,  if `perc_eps_until=0.5` then after 50\\% of the run has been completed $\\epsilon=0$."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
+    ".. admonition:: Info\n",
+    "    :class: myOwnStyle\n",
+    "\n",
+    "    This constraint handling method has been added recently and is still experimental. Please let us know if it has or has not worked for your problem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Such a method can be especially useful for equality constraints which are difficult to satisfy. See the example below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-07-03T13:27:50.792272Z",
-     "iopub.status.busy": "2022-07-03T13:27:50.791818Z",
-     "iopub.status.idle": "2022-07-03T13:28:04.372938Z",
-     "shell.execute_reply": "2022-07-03T13:28:04.372174Z"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -52,10 +67,8 @@
      "output_type": "stream",
      "text": [
       "Best solution found: \n",
-      "X = [0.9999975  0.99991586 0.99995368 0.99993331 0.99993838 0.99992354\n",
-      " 0.99977033 0.99990237 0.9999979  2.99956862 2.99953873 2.99935618\n",
-      " 0.99998701]\n",
-      "F = [-14.99698489]\n",
+      "X = [0.25000074 0.75002313]\n",
+      "F = [1.00002387]\n",
       "CV = [0.]\n"
      ]
     }
@@ -66,9 +79,9 @@
     "from pymoo.optimize import minimize\n",
     "from pymoo.problems.single import G1\n",
     "\n",
-    "problem = G1()\n",
+    "problem = ConstrainedProblemWithEquality()\n",
     "\n",
-    "algorithm = AdaptiveEpsilonConstraintHandling(DE())\n",
+    "algorithm = AdaptiveEpsilonConstraintHandling(DE(), perc_eps_until=0.5)\n",
     "\n",
     "res = minimize(problem,\n",
     "               algorithm,\n",
@@ -82,7 +95,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -96,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
