--- a/docs/source/misc/kktpm.ipynb
+++ b/docs/source/misc/kktpm.ipynb
@@ -193,7 +193,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -207,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
