--- a/docs/source/operators/selection.ipynb
+++ b/docs/source/operators/selection.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext"
+    "raw_mimetype": "text/restructuredtext",
+    "pycharm": {
+     "name": "#%% raw\n"
+    }
    },
    "source": [
     ".. _nb_selection:"
@@ -11,7 +14,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Selection\n",
     "\n",
@@ -21,7 +28,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     " \n",
     " \n",
@@ -32,7 +43,10 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext"
+    "raw_mimetype": "text/restructuredtext",
+    "pycharm": {
+     "name": "#%% raw\n"
+    }
    },
    "source": [
     ".. _nb_selection_random:"
@@ -40,14 +54,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Random Selection"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Here, we randomly pick solutions from the current population to be used for recombination. The implementation uses a permutation to avoid repetitive individuals. For instance, let us consider the case where only two parents are desired to be selected: The permutation (5,2,3,4,1,0), will lead to the parent selection of (5,2), (3,4), (1,0), where no parent can participate twice for mating."
    ]
@@ -62,7 +84,10 @@
      "iopub.status.idle": "2022-07-03T13:28:33.829286Z",
      "shell.execute_reply": "2022-07-03T13:28:33.828642Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -73,7 +98,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     " "
    ]
@@ -81,7 +110,10 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext"
+    "raw_mimetype": "text/restructuredtext",
+    "pycharm": {
+     "name": "#%% raw\n"
+    }
    },
    "source": [
     ".. _nb_selection_tournament:"
@@ -89,14 +121,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Tournament Selection"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "It has been shown that tournament pressure is helpful for faster convergence. This implementation provides the functionality to define a tournament selection very generic. \n",
     "Below we show a binary tournament selection (two individuals are participating in each competition).\n",
@@ -114,7 +154,10 @@
      "iopub.status.idle": "2022-07-03T13:28:36.951601Z",
      "shell.execute_reply": "2022-07-03T13:28:36.950434Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -148,7 +191,7 @@
     "        a, b = P[i]\n",
     "\n",
     "        # if the first individual is better, choose it\n",
-    "        if pop[a].F < pop[a].F:\n",
+    "        if pop[a].F < pop[b].F:\n",
     "            S[i] = a\n",
     "\n",
     "        # otherwise take the other individual\n",
@@ -171,7 +214,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### API"
    ]
@@ -179,7 +226,10 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext"
+    "raw_mimetype": "text/restructuredtext",
+    "pycharm": {
+     "name": "#%% raw\n"
+    }
    },
    "source": [
     ".. autofunction:: pymoo.factory.get_selection\n",
